<resources>
    <string name="app_name">Farmory</string>
    <string name="farmory">Farmory</string>
    <string name="title_activity_test">test_activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: dummy database -->
    <string-array name="category">
        <item>Vegetable</item>
        <item>Fruit</item>
        <item>Bakery</item>
        <item>Meat</item>
        <item>Cereal</item>
        <item>Seafood</item>
        <item>Diary</item>
        <item>Ice Cream</item>
        <item>Drinks</item>
        <item>Liquor</item>
        <item>Candy</item>
        <item>Spices</item>
        <item>Biscuits</item>
        <item>Jam</item>
        <item>Flour</item>
        <item>Pickle Rick</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="screen_1_title">Deliver anywhere, Superfast</string>
    <string name="screen_1_desc">Order delivery or pickup from more than 600000 restaurants, retailers, grocers, and more all across your city</string>
    <string name="screen_3_title">Safely Prepared</string>
    <string name="screen3_title">SafelyPrepared</string>
    <string name="screen_2_desc">Restaurants are expected to meet all relevant licensing requirements and to follow regulations—including food safety regulations</string>
    <string name="screen_2_title"><![CDATA[Order now &  pickup at door]]></string>
    <string name="screen_3_desc"><![CDATA[Delivery & takeout from the best local restaurants. Breakfast, lunch, dinner and more, delivered safely to your door]]></string>
    <string name="login_title">Login</string>
    <string name="signUp_title">Sign Up</string>
    <string name="emailLabel">Email</string>
    <string name="emailPlaceholder">Enter your email here</string>
    <string name="passwordLabel">Password</string>
    <string name="passwordPlaceholder">Enter your password here</string>
    <string name="rePasswordLabel">Verify Password</string>
    <string name="rePasswordPlaceholder">Retype your password here</string>
    <string name="forgotBtnText">Forgot Password?</string>
    <string name="logInText">LOGIN</string>
    <string name="signupText">SIGN UP</string>
    <string name="plainTextSignUp">Not an user?</string>
    <string name="plainTextSignIn">already an user?</string>
    <string name="signUpSirectBtnText">Sign up here</string>
    <string name="signInDirectBtnText">Sign in here</string>
    <string name="signInWIthText">Or sign in with</string>
    <string name="signUpWIthText">Or sign up with</string>
    <string name="homeTitle1">Fast and<br />\nDelicious</string>
    <string name="homeTitle2">Food</string>
    <string name="deliveryAddressText">Current Delivery Address</string>
    <string name="deliveryAddressValue">132, Main Road, Malabe</string>
    <string name="latestDealsText">Latest Deals</string>
    <string name="categoriesText">Categories</string>
    <string name="seeMoreButtonText">See More</string>
    <string name="productsText">Popular Products</string>
    <string name="promotionsTitleText">Promotions</string>
    <string name="promotionsConditionText">Copy the promo code and add it<br />\nat the checkout section  to get the offer</string>
    <string name="promoCode">KQ4OL9V</string>
    <string name="safetyPageTitle">Safety Practices</string>
    <string name="safetyPageSubTitle">to keep everyone safe</string>
    <string name="safetyInfo1">Our staff always use covid-19 regular safety wear including masks, head covers, gloves, etc..</string>
    <string name="safetyInfo2">Establish designated pick-up zones for customers to help maintain social distancing.</string>
    <string name="safetyInfo3">Practice social distancing when delivering food, offering “no touch” deliveries.</string>
    <string name="safetyInfo4">Routinely clean and sanitize coolers and insulated bags used to deliver foods.</string>
    <string name="the_title">The Title</string>
    <string name="Apple">Apple</string>
    <string name="rs80_g">80</string>
    <string name="g">Kg</string>
    <string name="Rs">Rs.</string>
    <string name="divider">/</string>
    <string name="end">.00</string>


</resources>