<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".homeScreen.SafetyBannerFragment">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corners"
        android:elevation="10px"
        android:padding="30px"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/safetyBannerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/safetyPageTitle"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="272dp"
        android:layout_height="29dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_vertical"
        android:text="@string/safetyPageSubTitle"
        android:textColor="@color/primaryGreen"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/safetyBannerTitle" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="271dp"
        android:layout_height="75dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        android:text="@string/safetyInfo1"
        android:textColor="@color/secondaryGray"
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/cat_1"
        app:layout_constraintTop_toBottomOf="@+id/safetyBannerTitle" />

    <ImageButton
        android:id="@+id/cat_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/safety_button_1"
        android:padding="30px"
        android:src="@drawable/ic_safety_gloves"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/safetyBannerTitle" />

    <ImageButton
        android:id="@+id/cat_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/safety_button_2"
        android:padding="30px"
        android:src="@drawable/ic_safety_distancing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cat_1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="254dp"
        android:layout_height="72dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        android:text="@string/safetyInfo2"
        android:textColor="@color/secondaryGray"
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/cat_2"
        app:layout_constraintTop_toBottomOf="@+id/cat_1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="275dp"
        android:layout_height="73dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        android:text="@string/safetyInfo3"
        android:textColor="@color/secondaryGray"
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/cat_3"
        app:layout_constraintTop_toBottomOf="@+id/cat_2" />

    <ImageButton
        android:id="@+id/cat_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/safety_button_3"
        android:padding="30px"
        android:src="@drawable/ic_safety_delivery"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cat_2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="258dp"
        android:layout_height="75dp"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center_vertical"
        android:text="@string/safetyInfo4"
        android:textColor="@color/secondaryGray"
        android:textSize="15dp"
        app:layout_constraintStart_toEndOf="@+id/cat_4"
        app:layout_constraintTop_toBottomOf="@+id/cat_3" />

    <ImageButton
        android:id="@+id/cat_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/safety_button_4"
        android:padding="30px"
        android:src="@drawable/ic_safety_spray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cat_3" />


</androidx.constraintlayout.widget.ConstraintLayout>